[gd_scene load_steps=3 format=2]

[ext_resource path="res://Theme/AnimatedButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="TitleScreen" type="CanvasLayer" parent="."]

[node name="Play" parent="TitleScreen" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -17.0
margin_right = 41.0
margin_bottom = 17.0
text = "Play"

[node name="LevelSelect" type="CanvasLayer" parent="."]
visible = false

[node name="GridContainer" type="GridContainer" parent="LevelSelect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -27.0
margin_right = 169.0
margin_bottom = 109.0
rect_min_size = Vector2( 100, 100 )
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 3

[node name="Level1" parent="LevelSelect/GridContainer" instance=ExtResource( 1 )]
margin_right = 26.0
text = "1"

[node name="Level2" parent="LevelSelect/GridContainer" instance=ExtResource( 1 )]
margin_left = 42.0
margin_right = 68.0
text = "2"

[node name="Level3" parent="LevelSelect/GridContainer" instance=ExtResource( 1 )]
margin_left = 84.0
margin_right = 110.0
text = "3"

[node name="Level4" parent="LevelSelect/GridContainer" instance=ExtResource( 1 )]
margin_top = 50.0
margin_right = 26.0
margin_bottom = 84.0
text = "4"

[node name="Level5" parent="LevelSelect/GridContainer" instance=ExtResource( 1 )]
margin_left = 42.0
margin_top = 50.0
margin_right = 68.0
margin_bottom = 84.0
text = "5"

[node name="Level6" parent="LevelSelect/GridContainer" instance=ExtResource( 1 )]
margin_left = 84.0
margin_top = 50.0
margin_right = 110.0
margin_bottom = 84.0
text = "6"

[connection signal="pressed" from="TitleScreen/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="LevelSelect/GridContainer/Level1" to="." method="_on_Level1_pressed"]
